# GNU_Chess

./: .gitignore  CMakeLists.txt  COMPILA ANDROID.txt  License.txt  Pasos para compilar e isntalar.txt  README.md  Windows build.txt
CMake/: FindCEGUI(LINUX).cmake  FindCEGUI.cmake  FindCEGUIOGRE(LINUX).cmake  FindFreeImage.cmake  FindFreetype.cmake  FindLIBROCKET.cmake  FindOGRE.cmake  FindOIS.cmake  FindRakNet.cmake  FindZLIB.cmake  FindZZip.cmake
CMake/Templates/: Android.mk.in  AndroidManifest.xml.in
CMake/toolchain/: AndroidJNI.cmake  android.toolchain.cmake  android.toolchain.cmake.new
headers/Modelo/: ArbolBusqueda.h  Autorizaciones.h  Modelo.h  ModeloTablero.h
headers/ModeloVista/: Casilla.h  EscenaAjedrez.h  Ficha.h  FichaAlfil.h  FichaCaballo.h  FichaPeon.h  FichaReina.h  FichaRey.h  FichaTorre.h  Jugador.h  JugadorArtificial.h  JugadorHumano.h  ModeloVista.h  ObjetoEscena.h  ObjetoOgre.h  Tablero.h  TableroMV.h
headers/Vistas/: AndroidListener.h  BaseListeners.h  BaseVistas.h  Escena.h  MenuInicio.h  MenuRocket.h  ObjetoOgre.h  RenderInterfaceOgre3D.h  RocketListener.h  SystemInterfaceOgre3D.h  Ventana.h  VistaAjedrez.h  VistaAjedrezSolo.h
impl/: Inicio.cpp
impl/Modelo/: ArbolBusqueda.cpp  Autorizaciones.cpp  Modelo.cpp  ModeloTablero.cpp  Movimientos.cpp
impl/ModeloVista/: Casilla.cpp  EscenaAjedrez.cpp  Ficha.cpp  FichaAlfil.cpp  FichaCaballo.cpp  FichaPeon.cpp  FichaReina.cpp  FichaRey.cpp  FichaTorre.cpp  Jugador.cpp  JugadorArtificial.cpp  JugadorHumano.cpp  ModeloVista.cpp  ObjetoEscena.cpp  ObjetoOgre.cpp  Tablero.cpp  TableroMV.cpp
impl/Vistas/: BaseListeners.cpp  BaseVistas.cpp  Escena.cpp  MenuInicio.cpp  MenuRocket.cpp  ObjetoOgre.cpp  RenderInterfaceOgre3D.cpp  RocketListener.cpp  SystemInterfaceOgre3D.cpp  Ventana.cpp  VistaAjedrez.cpp  VistaAjedrezSolo.cpp
include/: AndroidFileInterface.h  AndroidListener.h  rocket_fp.glsles
include/Modelo/: ArbolBusqueda.h  Autorizaciones.h  Jugador.h  JugadorArtificial.h  JugadorHumano.h  Modelo.h  ModeloTablero.h  Movimientos.h
include/ModeloVista/: Casilla.h  EscenaAjedrez.h  FichaCaballo.h  FichaPeon.h  FichaTorre.h  JugadorHumano.h  ModeloVista.h  ObjetoEscena.h  TableroMV.h
include/Vistas/: BaseListeners.h  BaseVistas.h  Escena.h  EventListeners.h  FrameListeners.h  InputContext.h  MenuRocket.h  ObjetoOgre.h  RenderInterfaceOgre3D.h  RenderInterfaceOgre3D.h.copa  RocketApplication.h  RocketListener.h  Ventana.h  VistaAjedrez.h  VistaAjedrezSolo.h
include/Vistas/Ogre/: FrameListeners.h  ObjetoOgre.h  OgreFramework.h
include/Vistas/UI/: RenderInterfaceOgreDirectX.h  RocketEventListener.h  RocketFrameListener.h  RocketListener.h
media/layouts/: ConfiguraAjedrezCEED.layout  InfoAjedrezCEED.layout  JaqueCEED.layout  MenuInicioAjedrezCEED.layout  TablasCEED.layout
media/models/: Alfil.mesh  Caballo.mesh  Casilla.mesh  Peon.mesh  Reina.mesh
src/: Inicio.cpp
src/Modelo/: ArbolBusqueda.cpp  Autorizaciones.cpp  Jugador.cpp  JugadorArtificial.cpp  JugadorHumano.cpp  Modelo.cpp  ModeloTablero.cpp  Movimientos.cpp
src/ModeloVista/: Casilla.cpp  EscenaAjedrez.cpp  FichaReina.cpp  FichaTorre.cpp  Jugador.cpp  JugadorArtificial.cpp  JugadorHumano.cpp  ModeloVista.cpp  ObjetoEscena.cpp  TableroMV.cpp
src/Vistas/: BaseListeners.cpp  BaseVistas.cpp  Escena.cpp  EventListeners.cpp  FrameListeners.cpp  MenuInicio.cpp  MenuRocket.cpp  ObjetoOgre.cpp  RenderInterfaceOgre3D.cpp  RenderInterfaceOgre3D.cpp.copia  RocketApplication.cpp  RocketListener.cpp  SystemInterfaceOgre3D.cpp  Ventana.cpp  VistaAjedrez.cpp  VistaAjedrezSolo.cpp
src/Vistas/Ogre/: FrameListeners.cpp  ObjetoOgre.cpp  OgreFramework.cpp
src/Vistas/UI/: RenderInterfaceOgre3D.cpp  RenderInterfaceOgreDirectX.cpp  RocketEventListener.cpp  RocketFrameListener.cpp  RocketListener.cpp
